--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <nav>
-                <p class="logo">Header Logo</p>
+                <p class="logo">Archangel</p>
                 <ul>
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#projects">My Projects</a></li>
@@ -21,35 +21,35 @@
             <section class="hero">
                 <div class="flex-container">
                     <div class="content">
-                        <h1 class="heading">This website is awesome</h1>
+                        <h1 class="heading">I code, you win</h1>
                         <p class="subheading">
-                            This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast
+                            I build fast, responsive, and stunning websites that turn heads and convert clicks.
                         </p>
                         <button  class="hero-btn">Sign up</button>
                     </div>
-                    <img src="./assets/images/cat.jpg" alt="" width="300" height="200">
+                    <img src="./assets/images/cat.jpg" alt="Image of cute cat" class="hero-img" width="300" height="200">
                 </div>
             </section>
             <section>
                 <h2>My Projects</h2>
                 <div class="projects">
                     <div class="project-container">
-                        <div class="project"></div>
+                        <div class="project"><img class="project-img" src="./assets/images/Snapshot_21-09-27_07-01-47.png" alt="" height="150" width="150"></div>
                             <h3 class="text">Project 1</h3>
                             <p class="text">Description of project 1.</p>
                     </div>
                     <div class="project-container">
-                        <div class="project"></div>
+                        <div class="project"><img class="project-img" src="./assets/images/thumbnail-1024x576.png" alt="" height="150" width="150"></div>
                             <h3 class="text">Project 2</h3>
                             <p class="text">Description of project 2.</p>
                     </div>
                     <div class="project-container">
-                        <div class="project"></div>
+                        <div class="project"><img class="project-img" src="./assets/images/Snapshot_21-10-24_05-55-52.png" alt="" height="150" width="150"></div>
                             <h3 class="text">Project 3</h3>
                             <p class="text">Description of project 3.</p>
                     </div>
                     <div class="project-container">
-                        <div class="project"></div>
+                        <div class="project"><img class="project-img" src="./assets/images/glass-morphism-768x525.webp" alt="" height="150" width="150"></div>
                             <h3 class="text">Project 4</h3>
                             <p class="text">Description of project 4.</p>
                     </div>
@@ -58,7 +58,7 @@
             <section class="quote">
                 <blockquote>
                     <p class="quote-text">
-                        "This is a quote from someone important. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks amazing."
+                        "God said to love to love your enemy, so i obeyed him and loved myself"
                     </p>
                     <cite>— Michael, The Archangel</cite>
                 </blockquote>
@@ -77,7 +77,7 @@
             </section>
         </main>
         <footer>
-            <p>Copyright &copy; 2025 My Web Page</p>
+            <p>Copyright &copy; 2025 <a href="https://github.com/Michael-Okorie" class="link">Michael Okorie</a></p>
         </footer>
     </body>
 </html>
